--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 dash==3.0.4
 dash_bootstrap_components==2.0.2
 gunicorn==23.0.0
+matplotlib==3.9.2
+numpy==2.2.5
 pandas==2.2.3
 plotly==6.0.1
+scikit-learn==1.6.1
+scipy==1.15.3
 urllib3==2.4.0
